# Booking_Hotels_Ranking

./: README.md  ben_scraping.ipynb  destination.py  hotels_Paris_25.json  hotels_Paris_25_v2.json  lea_scraping.ipynb  lea_scraping.py  lea_selenium.py  lib.py  ml.py  notebook.ipynb  plan.md  prepro.py  prepro_final.py  pyproject.toml  scraping.py  scraping_final.py  scraping_v2.py  scraping_v3.py  test.py  test_ben.py  test_lea.py  test_selenium.ipynb
Booking_Hotels_Ranking/: pyproject.toml
Booking_Hotels_Ranking/booking_hotels_ranking/: main.py  notebook.ipynb  prediction.py  preprocessing.py  scraping.py
Booking_Hotels_Ranking/tests/: test_booking_hotels_ranking.py
Booking_Machine_Learning/: README.md  pyproject.toml
Booking_Machine_Learning/booking_machine_learning/: machine_learning.py  preprocessing.py  presentation.ipynb  scraping.py
Booking_Machine_Learning/booking_machine_learning/img/: presentation.ipynb
Booking_Machine_Learning/tests/: test_booking_machine_learning.py
booking_hotels_ranking/: __main__.py  main.py  prediction.py  preprocessing.py  presentation.ipynb  scraping.py
tests/: test_booking_hotels_ranking.py
