[tool.poetry]
name = "booking_hotels_ranking"
version = "0.1.0"
description = ""
authors = ["Benjamin Chauvet <benchauvet41@gmail.com>", "Léa Brasseur <lea.brasseur41@gmail.com>"]

readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.6.0"
serde = "^0.9.0"

[tool.poetry.dev-dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
