[tool.poetry]
name = "booking-hotels-ranking"
version = "0.1.0"
description = ""
authors = ["Benjamin Chauvet <benchauvet41@gmail.com>", "Léa Brasseur <lea.brasseur41@gmail.com>"]
readme = "README.md"
packages = [{include = "booking_hotels_ranking"}]
repository = "https://github.com/Benjamin-Chauvet/Booking_Hotels_Ranking"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.7.2"
rich = "^13.1.0"
serde = "^0.9.0"
matplotlib = "^3.6.3"
seaborn = "^0.12.2"
scikit-learn = "^1.2.0"
xgboost = "^1.7.3"
pyserde = "^0.9.7"
typer = "^0.7.0"
janitor = "^0.1.1"
pyjanitor = "^0.24.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
